--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -41,6 +41,14 @@
   cursor: pointer;
 }
 
+.user-button {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: inherit;
+}
+
 .main-header {
   padding: 16px 0;
 }
